[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/ui/tilepanel.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/librairies/tiles/blueprints/tile_blueprint.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/tilepanel_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/theme/fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/GUI/icons/icon_sunlight.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.345098, 0.282353, 0.368627, 1 )
border_width_top = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 15

[sub_resource type="Theme" id=3]
Panel/styles/panel = SubResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D_Popup:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, -40 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D_Popup:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32, -48 ), Vector2( 32, -46 ), Vector2( 32, -48 ) ]
}

[node name="TilePanel" type="Panel"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
theme = ExtResource( 3 )
script = ExtResource( 1 )
tile_scene = ExtResource( 2 )
tile_index = 5

[node name="TileCenterPos" type="Control" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 32.0

[node name="Position2D_Popup" type="Position2D" parent="."]
position = Vector2( 32, -40 )

[node name="Panel" type="Panel" parent="Position2D_Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
theme = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Position2D_Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 5 )
expand = true

[node name="Tween" type="Tween" parent="Position2D_Popup"]

[node name="Label" type="Label" parent="Position2D_Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 4 )
anims/idle = SubResource( 5 )

[connection signal="gui_input" from="." to="." method="_on_TilePanel_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_TilePanel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TilePanel_mouse_exited"]
